scrollbar fix, app component wrapper overflow auto

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,10 @@ app-header {
   min-height: max-content;
 }
 
+.router-wrapper {
+  overflow: auto;
+}
+
 #cloud-scroll {
   background: url('../assets/img/clouds.png') repeat-x;
   background-size: cover;
