--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,10 +1,6 @@
 $cardWidth : 250px;
 $cardHeight : 250px;
 
-.projects-wrapper {
-  overflow: auto;
-}
-
 .wrap {
   min-height:$cardHeight;
   max-height:$cardHeight;
